# silcut

./: Cargo.toml  README.md
src/: cli.rs  ffmpeg.rs  main.rs  utils.rs
